--- a/app/src/main/res/layout/row_item_notifications.xml
+++ b/app/src/main/res/layout/row_item_notifications.xml
@@ -15,6 +15,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="@dimen/margin_8dp">
         <ImageView
+            android:id="@+id/image_noti"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/bglogin5"
@@ -25,14 +26,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1 giờ trước"
-        android:textSize="18dip"
+        android:textSize="14dip"
         android:paddingRight="@dimen/margin_16dp"
         android:textColor="@color/colorPrimary"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBaseline_toBaselineOf="@+id/text_view_nameFood"
         android:layout_marginRight="0dp" />
     <TextView
-        android:id="@+id/text_view_nameFood"
+        android:id="@+id/text_view_nameResNoti"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
@@ -50,7 +51,7 @@
         android:id="@+id/text_view_food_decription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/text_view_nameFood"
+        app:layout_constraintTop_toBottomOf="@id/text_view_nameResNoti"
         android:layout_marginTop="@dimen/margin_4dp"
         app:layout_constraintLeft_toRightOf="@id/frame_noti"
         android:layout_marginLeft="@dimen/margin_16dp"
