--- a/app/src/main/res/layout/row_item_notifications.xml
+++ b/app/src/main/res/layout/row_item_notifications.xml
@@ -6,8 +6,8 @@
     android:layout_height="wrap_content">
     <FrameLayout
         android:id="@+id/frame_noti"
-        android:layout_width="72dp"
-        android:layout_height="72dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="@dimen/margin_8dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -27,10 +27,12 @@
         android:layout_height="wrap_content"
         android:text="1 giờ trước"
         android:textSize="14dip"
-        android:paddingRight="@dimen/margin_16dp"
+        android:paddingRight="@dimen/margin_8dp"
         android:textColor="@color/colorPrimary"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBaseline_toBaselineOf="@+id/text_view_nameFood"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="@dimen/margin_8dp"
         android:layout_marginRight="0dp" />
     <TextView
         android:id="@+id/text_view_nameResNoti"
@@ -40,7 +42,7 @@
         android:layout_marginLeft="@dimen/margin_16dp"
         app:layout_constraintLeft_toRightOf="@id/frame_noti"
         app:layout_constraintRight_toLeftOf="@id/text_view_ago_noti"
-        android:textSize="19dip"
+        android:textSize="16dip"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="@dimen/margin_4dp"
@@ -57,7 +59,6 @@
         android:layout_marginLeft="@dimen/margin_16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="@dimen/margin_16dp"
-        android:textSize="16dip"
-        android:maxLines="2"
+        android:textSize="14dip"
         android:text="adadha akdad a dadadj ad adha ad ad   ad ad aldj ad  ad ajd  adj \" />
 </android.support.constraint.ConstraintLayout>
