--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -31,6 +31,10 @@
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
                 android:title="Đánh giá ứng dụng" />
+            <item
+                android:id="@+id/nav_register_admin"
+                android:icon="@drawable/ic_face_black_24dp"
+                android:title="Đăng ký chủ nhà hàng" />
         </menu>
     </item>
 
