--- a/app/src/main/res/layout/toolbar_detail.xml
+++ b/app/src/main/res/layout/toolbar_detail.xml
@@ -19,6 +19,7 @@
                 android:src="@drawable/search_back"
                 android:layout_marginRight="@dimen/margin_4dp"/>
             <TextView
+                android:id="@+id/text_view_name_detail"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingLeft="36dp"
