--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,13 +5,103 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.linhnv.foodsy.activity.PlaceDetailActivity">
-
+    android:orientation="vertical">
     <include
+        android:id="@+id/tl_detail"
         layout="@layout/toolbar_detail"
         />
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/coordinator_layout"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorWhite">
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/app_bar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
 
-    <include layout="@layout/content_place_detail" />
+            <LinearLayout
+                android:id="@+id/lytSearchBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:gravity="center_vertical"
+                android:orientation="vertical"
+                android:visibility="visible"
+                app:layout_scrollFlags="scroll|enterAlways">
 
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="220dp"
+                    android:layout_margin="@dimen/margin_8dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/bglogin5" />
+
+                <Button
+                    android:id="@+id/button_ready_detail"
+                    android:layout_width="match_parent"
+                    android:layout_height="34dp"
+                    android:layout_marginLeft="@dimen/margin_32dp"
+                    android:layout_marginRight="@dimen/margin_32dp"
+                    android:layout_marginTop="@dimen/margin_8dp"
+                    android:background="@drawable/bg_button_selected4"
+                    android:text="@string/app_name"
+                    android:textAllCaps="false"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18dip"
+                    android:layout_marginBottom="@dimen/margin_8dp"/>
+            </LinearLayout>
+        </android.support.design.widget.AppBarLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/lytSearchBar"
+            android:orientation="vertical"
+            android:paddingTop="10dp"
+            android:background="@color/colorWhite"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/text_view_foodMenu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:gravity="left"
+                    android:text="@string/food_menu"
+                    android:paddingLeft="@dimen/margin_8dp"/>
+                <TextView
+                    android:id="@+id/text_view_placeReviews"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:text="@string/place_review"
+                    android:gravity="center"/>
+
+                <TextView
+                    android:id="@+id/text_view_placeDetail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:gravity="right"
+                    android:text="@string/place_detail"
+                    android:paddingRight="@dimen/margin_8dp"/>
+            </LinearLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycle_view_foodMenu"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </android.support.v7.widget.RecyclerView>
+        </LinearLayout>
+
+        <!--<include layout="@layout/content_place_detail" /> -->
+
+    </android.support.design.widget.CoordinatorLayout>
 </LinearLayout>
+
+
