--- a/app/src/main/res/layout/toolbar_detail.xml
+++ b/app/src/main/res/layout/toolbar_detail.xml
@@ -26,7 +26,9 @@
                 android:paddingRight="40dp"
                 android:text="The Coffee House"
                 android:textColor="@color/colorWhite"
-                android:textSize="20dp"
+                android:textSize="18dp"
+                android:ellipsize="end"
+                android:lines="1"
                 android:gravity="center"/>
             <ImageView
                 android:layout_width="28dp"
