--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -158,14 +158,26 @@
                 android:layout_height="match_parent"
                 android:visibility="gone"/>
         </LinearLayout>
-        <!---<ImageView
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginRight="@dimen/margin_16dp"
-            android:src="@drawable/like"
-            />-->
-
+            android:layout_gravity="bottom"
+            android:gravity="bottom"
+            android:background="@color/colorWhite">
+            <RatingBar
+                android:id="@+id/ratingBar1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="96dp"/>
+            <Button
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/margin_16dp"
+                android:text="@string/button_send"
+                />
+        </RelativeLayout>
     </android.support.design.widget.CoordinatorLayout>
 </LinearLayout>
 
