--- a/app/src/main/res/layout/row_item_food_reviews.xml
+++ b/app/src/main/res/layout/row_item_food_reviews.xml
@@ -47,6 +47,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         android:layout_marginLeft="8dp" />
     <TextView
+        android:id="@+id/text_view_date_comment"
         android:layout_width="0dp"
         android:layout_height="30dp"
         app:layout_constraintTop_toBottomOf="@id/text_view_displayName_reviews"
