--- a/app/src/main/res/layout/activity_update_info.xml
+++ b/app/src/main/res/layout/activity_update_info.xml
@@ -60,18 +60,16 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.90" />
-
     <ImageView
         android:id="@+id/image_avatar"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginTop="@dimen/margin_32dp"
-        android:scaleType="centerCrop"
         android:src="@drawable/camera"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="@dimen/margin_32dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:scaleType="centerCrop"/>
     <TextView
         android:layout_width="0dp"
         android:layout_height="40dp"
