--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -77,6 +77,7 @@
             android:layout_height="0dp"
             android:layout_weight="1">
             <EditText
+                android:id="@+id/edit_text_search"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginLeft="@dimen/margin_8dp"
