--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -13,7 +13,5 @@
         android:id="@+id/recycler_view_search"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/layout_search">
-
-    </android.support.v7.widget.RecyclerView>
+        android:layout_below="@id/layout_search"/>
 </RelativeLayout>
