--- a/app/src/main/res/layout/activity_register_owner.xml
+++ b/app/src/main/res/layout/activity_register_owner.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/image_restaurant_product"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_marginTop="@dimen/margin_32dp"
         android:scaleType="centerCrop"
         android:src="@drawable/camera"
@@ -21,31 +21,29 @@
     <EditText
         android:id="@+id/edit_text_displayname"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/textview_ui1"
         android:ems="10"
-
-        android:hint="Tên nhà hàng"
+        android:hint="@string/place_name"
         android:inputType="text"
         android:padding="@dimen/margin_10dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_restaurant_product" />
-
     <EditText
         android:id="@+id/edit_text_phone_number"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/textview_ui1"
         android:ems="10"
-        android:hint="Ði?n tho?i"
+        android:hint="@string/place_phonenumber"
         android:inputType="phone"
         android:padding="@dimen/margin_10dp"
         app:layout_constraintHorizontal_bias="0.0"
@@ -62,34 +60,38 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/textview_ui1"
         android:ems="10"
-        android:hint="Ð?a ch?"
+        android:hint="@string/place_address"
         android:inputType="text"
         android:padding="@dimen/margin_10dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_text_phone_number" />
-    <com.thomashaertel.widget.MultiSpinner
+    <Spinner
         android:id="@+id/sp_category"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
         android:textSize="17dp"
         android:layout_marginTop="4dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_text_address" />
-    <!--<Spinner
-        android:id="@+id/sp_category"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:padding="@dimen/margin_10dp"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:background="@drawable/textview_ui1"
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_address" />
+    <Button
+        android:id="@+id/button_register_owner"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
+        app:layout_constraintTop_toBottomOf="@id/sp_category"
+        android:layout_marginTop="@dimen/margin_32dp"
+        android:text="@string/sign_up"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_text_address" />-->
+        android:layout_marginLeft="@dimen/margin_32dp"
+        android:layout_marginRight="@dimen/margin_32dp"
+        android:layout_marginBottom="@dimen/margin_8dp"
+        android:background="@drawable/bg_button_selected1"
+        android:textColor="@color/colorWhite"/>
 </android.support.constraint.ConstraintLayout>
